Bug XXXXX - Video text overflow

--- a/apps/video/style/video.css
+++ b/apps/video/style/video.css
@@ -90,12 +90,13 @@ li .details {
   height: 9.3rem;
   top: 0;
   right: 1.8rem;
-  visibility: hidden;
+  overflow: hidden;
+  /*visibility: hidden;*/
 }
 li .details[data-visible] {
   visibility: visible;
 }
-li .after span:last-child {
+li .after {
   color: #95a3a6;
 }
 
